@@ -20,8 +20,6 @@ import schemaish
 import transaction
 from validatish import validator
 
-from datetime import datetime
-
 from webob.exc import HTTPFound
 from webob.exc import HTTPOk
 from zope.component.event import objectEventNotify
@@ -68,10 +66,8 @@ from karl.content.interfaces import IWiki
 from karl.content.interfaces import IWikiPage
 from karl.content.models.wiki import WikiPage
 from karl.content.views.utils import extract_description
-from karl.content.views.atom import WikiAtomFeed
 
 from karl.security.workflow import get_security_states
-import time
 
 _wiki_text_help = """You can create a new page by naming it and surrounding
 the name with ((double parentheses)). When you save the page, the contents
@@ -288,8 +284,7 @@ def show_wikipage_view(context, request):
         )
 
 
-def preview_wikipage_view(context, request, WikiPage=WikiPage,
-        tz=time.timezone):
+def preview_wikipage_view(context, request, WikiPage=WikiPage, tz=None):
     version_num = int(request.params['version_num'])
     repo = find_repo(context)
     for version in repo.history(context.docid):
