@@ -10,6 +10,9 @@ Unreleased
 - When restoring an object from the trash, if a conflicting name is
   in the container, append a suffix to the name.  (LP #821206)
 
+- Fixed a DST issue in the versions.format_local_date() function which
+  formats a date for display in versioning UIs.
+
 3.70 (2011-08-25)
 -----------------
 
